--- a/Apriori_algorithm.ipynb
+++ b/Apriori_algorithm.ipynb
@@ -5,7 +5,7 @@
    "id": "d3c14b63",
    "metadata": {},
    "source": [
-    "## Task 2: Apriori Algorithm\n",
+    "## Apriori Algorithm\n",
     "minsup: 0.3\n",
     "minconf: 0.8\n",
     "minlift: 1.0\n",
